...
				/>
			}
		>
			<Stack.Screen
				options={{
					headerShown: true,
					title: "Dashboard",
					headerTransparent: Platform.OS === "ios",
				}}
			/>

			<UserCard
				name={profile.data?.name}
...
						<Text className="font-semibold">Scan code</Text>
					</Card>
				</Pressable>
			</View>

			<Text className="mt-4" size="large">
				Rewards
			</Text>

			{rewards.isLoading ? (
				<Card className="h-40" loading />
			) : rewards.data?.length ? (
				rewards.data.map((reward) => (
...
