appId: ${APP_ID}
---
- launchApp:
    clearState: true
    clearKeychain: true
- tapOn: Email
- inputText: ${EMAIL}
- tapOn: Password
- inputText: ${PASSWORD}
- hideKeyboard
- tapOn: Sign in
- assertVisible: Dashboard

